# semester-work-template

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  demo_benchmark.cpp
cmake/: StaticAnalyzers.cmake
dataset/: generate_csv_dataset .py  generate_csv_dataset.cpp  generate_csv_dataset.py
dataset/data/: dataset-example.csv
include/: data_structure.hpp
src/: data_structure.cpp
